# MutliThreading-Draw-Pthread

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  benchmark.csv  benchmark2.csv  color.cpp  color.h  draw_parallel.cpp  draw_parallel.h  draw_serial.cpp  draw_serial.h  fractale.cpp  fractale_benchmark.cpp  modules.cpp  modules.h  plot  plot2
test/: CMakeLists.txt  product.hpp  test_fractale.cpp
